5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1723_2506.log
== SUBMITION (2019-05-16 01:15:56) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t> 0 and t < 120000):
   	t = t + t * pc-qr
		a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
2.39766
-- ERROR:
  File "/home/codebench/codes/1723/2506/main.py", line 7
    a = a + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:15:58) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t> 0 and t < 120000):
   	t = t + t * pc-qr
		a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
3.11918
-- ERROR:
  File "/home/codebench/codes/1723/2506/main.py", line 7
    a = a + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:15:59) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t> 0 and t < 120000):
   	t = t + t * pc-qr
		a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
4.50017
-- ERROR:
  File "/home/codebench/codes/1723/2506/main.py", line 7
    a = a + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:15:59) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t> 0 and t < 120000):
   	t = t + t * pc-qr
		a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
3.463
-- ERROR:
  File "/home/codebench/codes/1723/2506/main.py", line 7
    a = a + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:16:57) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t> 0 and t < 120000):
   	t = t + t * pc-qr
		a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
1.5511
-- ERROR:
  File "/home/codebench/codes/1723/2506/main.py", line 7
    a = a + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:17:10) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t> 0 and t < 120000):
	t = t + t * pc-qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
2.15583
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
18
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:17:15) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t> 0 and t < 120000):
	t = t + t * pc-qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
2.49239
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
18
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
qnt inicial de tambaquis:percentual de crescimento:quantia retirada do tanqueLIMITE
12
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:18:21) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t > 0 and t < 120000):
	t = t + t * pc-qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
1.81145
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
18
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
12
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:18:29) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t > 0 and t < 120000):
	t = t + t * pc-qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
1.7751
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
qnt inicial de tambaquis:percentual de crescimento:quantia retirada do tanqueEXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
qnt inicial de tambaquis:percentual de crescimento:quantia retirada do tanqueLIMITE
18
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:18:33) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t > 0 and t < 120000):
	t = t + t * pc-qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
1.73199
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
18
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
qnt inicial de tambaquis:percentual de crescimento:quantia retirada do tanqueLIMITE
12
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:19:45) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t > 0 and t < 120000):
	t = t + t * pc - qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
1.32006
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
18
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
qnt inicial de tambaquis:percentual de crescimento:quantia retirada do tanqueLIMITE
12
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:19:53) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t > 0 and t < 12000):
	t = t + t * pc - qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
1.40803
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
qnt inicial de tambaquis:percentual de crescimento:quantia retirada do tanqueLIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:20:01) 
-- CODE:
t = int(input("qnt inicial de tambaquis:"))
pc = int(input("percentual de crescimento:"))/100
qr = int(input("quantia retirada do tanque"))
a = 0
while(t > 0 and t < 12000):
	t = t + t * pc - qr
	a = a + 1
if(t<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
1.98563
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
